@@ -196,9 +196,10 @@
     <signal name="key-press-event" handler="on_key_press_event" after="yes" swapped="no"/>
     <signal name="key-release-event" handler="on_key_release_event" after="yes" swapped="no"/>
     <child>
-      <object class="GtkVBox" id="Widget">
+      <object class="GtkBox" id="Widget">
         <property name="visible">True</property>
         <property name="can_focus">True</property>
+        <property name="orientation">vertical</property>
         <child>
           <object class="GtkMenuBar" id="MenuBar">
             <property name="visible">True</property>
@@ -1213,7 +1214,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkHBox" id="hbox1">
+          <object class="GtkBox" id="hbox1">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <child>
@@ -1234,7 +1235,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <child>
-                          <object class="GtkHBox" id="SurfaceBox">
+                          <object class="GtkBox" id="SurfaceBox">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="double_buffered">False</property>
